# ippl

./: Basics.html  CMakeLists.txt  README.md
alpine/: AlpineManager.h  FieldContainer.hpp  FieldSolver.hpp  ParticleContainer.hpp  PenningTrapManager.h  datatypes.h
dirichlet/: AlpineManager.h  CMakeLists.txt  FieldContainer.hpp  FieldSolver.hpp  UniformField.cpp  UniformFieldManager.h
plasmaSheath/: AlpineManager.h  FieldContainer.hpp  FieldSolver.hpp  ParticleContainer.hpp  PlasmaParams.hpp  PlasmaSheath.cpp  PlasmaSheathManager.h  input.h  inputfile_example.ini
src/: IpplCore.h
src/Communicate/: Archive.hpp  Buffers.hpp  Tags.h
src/Expression/: IpplOperations.h
src/FEM/: .LagrangeSpace.hpp.swp  DOFHandler.h  DOFHandler.hpp  FEMContainer.h  FEMContainer.hpp  FEMInterpolate.hpp  FiniteElementSpace.h  FiniteElementSpace_nonuniform.h  FiniteElementSpace_nonuniform.hpp  LagrangeSpace.h  LagrangeSpace.hpp  LagrangeSpace_nonuniform.h  LagrangeSpace_nonuniform.hpp  NedelecSpace.h  NedelecSpace.hpp  ProjectCurrent.hpp
src/Field/: BareField.h  BareField.hpp  Field.hpp  FieldOperations.hpp  HaloCells.hpp
src/LinearSolvers/: PCG.h  PreconditionerValidation.h
src/Meshes/: Cartesian.h  Cartesian.hpp  Mesh.h  UniformCartesian.h  UniformCartesian.hpp
src/Particle/: ParticleBC.h
src/PoissonSolvers/: EvalFunctor.h  FEMPoissonSolver.h  FEMPoissonSolver_nonuniform.h  FFTPeriodicPoissonSolver.hpp  PreconditionedFEMPoissonSolver.h
test/FFT/: CMakeLists.txt  Test.cpp
test/field/: .TestField_nonuniform.cpp.swp  CMakeLists.txt  TestFieldBC_nonuniform.cpp  (+1 more)
(+16 files in other folders)
